--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "repository": "YerkoPalma/chooify",
   "keywords": [],
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "through": "^2.3.8"
+  },
   "devDependencies": {
     "browserify": "^13.1.0",
     "budo": "^9.2.1",
